doc: insert tags
