# src/controllers/customers.controllers.js
@@ -5,9 +5,10 @@ import connection from "../database/db.js";
 
 export async function customersList(req, res) {
   /*
+    #swagger.tags = ['Customers']
     #swagger.description = 'Route for list customers.'
   */
- 
+
   const orderPagesSQL = req.orderPagesSQL;
   const whereSQL = req.whereSQL;
 
@@ -27,6 +28,7 @@ export async function customersList(req, res) {
 
 export async function getCustomer(req, res) {
   /*
+    #swagger.tags = ['Customers']
     #swagger.description = 'Route for show a customer.'
   */
 
@@ -51,41 +53,8 @@ export async function getCustomer(req, res) {
 
 export async function customerInsert(req, res) {
   /*
+    #swagger.tags = ['Customers']
     #swagger.description = 'Route for insert a new customer'
-  */
-
-  /*
-  #swagger.parameters['name'] = {
-	description: 'Customer's name',
-    type: 'string',
-    required: true,
-    in: 'body',
-    example: 'Robert Plant',
-  }
-
-  #swagger.parameters['phone'] = {
-	description: 'Customer's phone number',
-    type: 'string',
-    required: true,
-    in: 'body',
-    example: '85911223344',
-  }
-
-  #swagger.parameters['cpf'] = {
-	description: 'Customer's CPF document number',
-    type: 'string',
-    required: true,
-    in: 'body',
-    example: '01234567890',
-  }
-
-  #swagger.parameters['birthday'] = {
-	description: 'Customer's birthday',
-    type: 'date',
-    required: true,
-    in: 'body',
-    example: '1948-08-20',
-  }
   */
 
   const { name, phone, cpf, birthday } = req.customer;
@@ -112,6 +81,7 @@ export async function customerInsert(req, res) {
 
 export async function customerUpdate(req, res) {
   /*
+    #swagger.tags = ['Customers']
     #swagger.description = 'Route for update customer data.'
   */
 
