# src/swagger/swagger_output.json
@@ -13,11 +13,38 @@
   "paths": {
     "/categories": {
       "get": {
+        "tags": [
+          "Categories"
+        ],
         "description": "Route for list categories.",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "offset",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "desc",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -25,20 +52,11 @@
         }
       },
       "post": {
-        "description": "Route for insert new category.",
-        "parameters": [
-          {
-            "name": "name",
-            "description": "Category name to insert",
-            "required": true,
-            "in": "body",
-            "example": "Terror",
-            "schema": {
-              "type": "object",
-              "properties": {}
-            }
-          }
+        "tags": [
+          "Categories"
         ],
+        "description": "Route for insert new category.",
+        "parameters": [],
         "responses": {
           "201": {
             "description": "Created"
@@ -57,8 +75,31 @@
     },
     "/customers": {
       "get": {
+        "tags": [
+          "Customers"
+        ],
         "description": "Route for list customers.",
         "parameters": [
+          {
+            "name": "offset",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "desc",
+            "in": "query",
+            "type": "string"
+          },
           {
             "name": "cpf",
             "in": "query",
@@ -69,6 +110,9 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -77,6 +121,9 @@
     },
     "/customers/{id}": {
       "get": {
+        "tags": [
+          "Customers"
+        ],
         "description": "Route for show a customer.",
         "parameters": [
           {
@@ -99,6 +146,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Customers"
+        ],
         "description": "Route for update customer data.",
         "parameters": [
           {
@@ -126,6 +176,9 @@
     },
     "/customers/": {
       "post": {
+        "tags": [
+          "Customers"
+        ],
         "description": "Route for insert a new customer",
         "parameters": [],
         "responses": {
@@ -146,8 +199,31 @@
     },
     "/games": {
       "get": {
+        "tags": [
+          "Games"
+        ],
         "description": "Route for list games.",
         "parameters": [
+          {
+            "name": "offset",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "desc",
+            "in": "query",
+            "type": "string"
+          },
           {
             "name": "name",
             "in": "query",
@@ -158,12 +234,18 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "post": {
+        "tags": [
+          "Games"
+        ],
         "description": "Route for insert a new game",
         "parameters": [],
         "responses": {
@@ -184,8 +266,46 @@
     },
     "/rentals": {
       "get": {
+        "tags": [
+          "Rentals"
+        ],
         "description": "Route for list rentals.",
         "parameters": [
+          {
+            "name": "offset",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "desc",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "status",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "startDate",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "endDate",
+            "in": "query",
+            "type": "string"
+          },
           {
             "name": "customerId",
             "in": "query",
@@ -201,12 +321,18 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "post": {
+        "tags": [
+          "Rentals"
+        ],
         "description": "Route for create a new rental.",
         "parameters": [],
         "responses": {
@@ -224,6 +350,9 @@
     },
     "/rentals/{id}/return": {
       "post": {
+        "tags": [
+          "Rentals"
+        ],
         "description": "Route for close a opened rental.",
         "parameters": [
           {
@@ -251,6 +380,9 @@
     },
     "/rentals/{id}": {
       "delete": {
+        "tags": [
+          "Rentals"
+        ],
         "description": "Route for delete a closed rental.",
         "parameters": [
           {
